Colab을 통해 생성됨

--- a/실습01_시카고공립학교_배포.ipynb
+++ b/실습01_시카고공립학교_배포.ipynb
@@ -2500,73 +2500,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "tags": [],
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 184
+          "base_uri": "https://localhost:8080/"
         },
         "id": "XKQ7TAUv6sfu",
-        "outputId": "01105679-e8d5-4acc-8d43-7f75b77abc53"
+        "outputId": "7c7d90c3-1439-49ba-c5ca-7fc480b6d80e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " * sqlite:///RealWorldData.db\n",
-            "Done.\n"
+            " * sqlite:///RealWorldData.db\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[('OAKLAND', 140),\n",
-              " ('FULLER PARK', 531),\n",
-              " ('BURNSIDE', 549),\n",
-              " ('OHARE', 786),\n",
-              " ('LOOP', 871)]"
-            ],
-            "text/html": [
-              "<table>\n",
-              "    <thead>\n",
-              "        <tr>\n",
-              "            <th>COMMUNITY_AREA_NAME</th>\n",
-              "            <th>TOTAL_ENROLLMENT</th>\n",
-              "        </tr>\n",
-              "    </thead>\n",
-              "    <tbody>\n",
-              "        <tr>\n",
-              "            <td>OAKLAND</td>\n",
-              "            <td>140</td>\n",
-              "        </tr>\n",
-              "        <tr>\n",
-              "            <td>FULLER PARK</td>\n",
-              "            <td>531</td>\n",
-              "        </tr>\n",
-              "        <tr>\n",
-              "            <td>BURNSIDE</td>\n",
-              "            <td>549</td>\n",
-              "        </tr>\n",
-              "        <tr>\n",
-              "            <td>OHARE</td>\n",
-              "            <td>786</td>\n",
-              "        </tr>\n",
-              "        <tr>\n",
-              "            <td>LOOP</td>\n",
-              "            <td>871</td>\n",
-              "        </tr>\n",
-              "    </tbody>\n",
-              "</table>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
         }
       ],
-      "source": []
+      "source": [
+        "%sql SELECT COMMUNITY_AREA_NAME, SUM(COLLEGE_ENROLLMENT) AS TOTAL_ENROLLMENT FROM CHICAGO_PUBLIC_SCHOOLS_DATA GROUP BY COMMUNITY_AREA_NAME ORDER BY TOTAL_ENROLLMENT LIMIT 5;"
+      ]
     },
     {
       "cell_type": "markdown",
